# pubmed_fetcher

./: README.rst  pyproject.toml  results.csv
src/pubmed_fetcher/: cli.py  core.py
tests/: test_pubmed_fetcher.py
